# random-word-reader

./: BUILD.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: app.rs  main.rs  speaker.rs  utils.rs
words/: Noun.txt  Question.txt  Vocabulary.txt  custom.txt  idiom.txt  noun.txt  verb.txt
