[package]
name = "random-word-reader"
version = "2.1.1"
authors = ["Daryl Pinto <daryl.j.pinto@gmail.com>"]
edition = "2021"

[build-dependencies]
winres = "0.1.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0"
tts = "0.22.3"
rand = "0.8.5"